--- a/index.html
+++ b/index.html
@@ -10,30 +10,15 @@
     <title>Asynchronous JavaScript</title>
   </head>
   <body>
-  
-      <div class="county">
-        <input type="text" class="inp_country">
-        <!-- <input type="text" class="inp_country_value"> -->
-        <input type="number" class="inp_neighbour">
-      </div>
+    <div class="county">
+      <input type="text" class="inp_country" />
+      <!-- <input type="text" class="inp_country_value"> -->
+      <input type="number" class="inp_neighbour" />
+    </div>
     <main class="container">
-      <div class="countries">
-        <!--         
-        <article class="country">
-          <img class="country__img" src="" />
-          <div class="country__data">
-            <h3 class="country__name">COUNTRY</h3>
-            <h4 class="country__region">REGION</h4>
-            <p class="country__row"><span>👫</span>POP people</p>
-            <p class="country__row"><span>🗣️</span>LANG</p>
-            <p class="country__row"><span>💰</span>CUR</p>
-          </div>
-        </article>
-        -->
-      </div>
-      
+      <div class="countries"></div>
+
       <button class="btn-country">Where am I?</button>
-      <!-- <div class="images"></div> -->
     </main>
   </body>
 </html>
