🔥 feat: handling error, add responsiveness

--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
   </head>
   <body>
     <div class="county">
-      <input type="text" class="inp_country" />
-      <!-- <input type="text" class="inp_country_value"> -->
-      <input type="number" class="inp_neighbour" />
-    </div>
-    <main class="container">
-      <div class="countries"></div>
+      <div class="input_container">
+        <input type="text" class="inp_country" placeholder="Country Name" />
 
+        <input
+          type="number"
+          class="inp_neighbour"
+          placeholder="Neighbour Country code"
+        />
+      </div>
       <button class="btn-country">Where am I?</button>
-    </main>
+    </div>
+    <main class="container"></main>
   </body>
 </html>
